--- a/src/angular-slidezilla.css
+++ b/src/angular-slidezilla.css
@@ -3,10 +3,12 @@
   vertical-align: middle;
   position: relative;
 }
+
 .slider.slider-horizontal {
-  width: 210px;
+  width: 100%;
   height: 20px;
 }
+
 .slider.slider-horizontal .slider-track {
   height: 10px;
   width: 100%;
@@ -14,15 +16,18 @@
   top: 50%;
   left: 0;
 }
+
 .slider.slider-horizontal .slider-selection {
   height: 100%;
   top: 0;
   bottom: 0;
 }
+
 .slider.slider-horizontal .slider-handle {
   margin-left: -10px;
   margin-top: -5px;
 }
+
 .slider.slider-horizontal .slider-handle.triangle {
   border-width: 0 10px 10px 10px;
   width: 0;
@@ -30,10 +35,12 @@
   border-bottom-color: #0480be;
   margin-top: 0;
 }
+
 .slider.slider-vertical {
   height: 210px;
   width: 20px;
 }
+
 .slider.slider-vertical .slider-track {
   width: 10px;
   height: 100%;
@@ -41,29 +48,23 @@
   left: 50%;
   top: 0;
 }
+
 .slider.slider-vertical .slider-selection {
   width: 100%;
   left: 0;
   top: 0;
   bottom: 0;
 }
+
 .slider.slider-vertical .slider-handle {
   margin-left: -5px;
   margin-top: -10px;
 }
-.slider.slider-vertical .slider-handle.triangle {
-  border-width: 10px 0 10px 10px;
-  width: 1px;
-  height: 1px;
-  border-left-color: #0480be;
-  margin-left: 0;
-}
+
 .slider input {
   display: none;
 }
-.slider .tooltip-inner {
-  white-space: nowrap;
-}
+
 .slider-track {
   position: absolute;
   cursor: pointer;
@@ -82,6 +83,7 @@
   -moz-border-radius: 4px;
   border-radius: 4px;
 }
+
 .slider-selection {
   position: absolute;
   background-color: #f7f7f7;
@@ -102,30 +104,27 @@
   -moz-border-radius: 4px;
   border-radius: 4px;
 }
+
 .slider-handle {
   position: absolute;
-  width: 20px;
+  padding-left: 10px;
+  padding-right: 10px;
   height: 20px;
-  background-color: #0e90d2;
-  background-image: -moz-linear-gradient(top, #149bdf, #0480be);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#149bdf), to(#0480be));
-  background-image: -webkit-linear-gradient(top, #149bdf, #0480be);
-  background-image: -o-linear-gradient(top, #149bdf, #0480be);
-  background-image: linear-gradient(to bottom, #149bdf, #0480be);
-  background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff149bdf', endColorstr='#ff0480be', GradientType=0);
-  -webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
-  -moz-box-shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
-  box-shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
-  opacity: 0.8;
+  color: white;
+  background-color: gray;
+  opacity: 0.9;
   border: 0px solid transparent;
-}
-.slider-handle.round {
   -webkit-border-radius: 20px;
   -moz-border-radius: 20px;
   border-radius: 20px;
 }
 
-.slider-handle.hidden{
-    display: none;
+.slider-handle:hover{
+  opacity: 1;
+}
+
+.slider-handle .round {
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  border-radius: 20px;
 }
